apps/hyunjiin-user-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hyunjiin-user-api
  namespace: hyunjiin
  labels:
    app: hyunjiin-user-api
spec:
  type: ClusterIP
  selector:
    app: hyunjiin-user-api
  ports:
    - name: http
      port: 80
      targetPort: http
