apps/hyunjiin-user-api/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hyunjiin-user-api
  namespace: hyunjiin
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  ingressClassName: nginx
  rules:
    - host: api.hyunjiin.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hyunjiin-user-api
                port:
                  name: http
